--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
+    "d3": "^5.16.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
